# Vigil

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Dockerfile.hapi  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
backend/: cache.py  schemas.py
data/: seed_hapi.py
deploy/: fly.a2a.toml  fly.api.toml  fly.hapi.toml  fly.mcp.toml
docs/: A2A_LOCAL_SMOKE.md  A2A_REFACTOR_AUDIT.md  AGENTS_ASSEMBLE_TRANSCRIPT.md  API_CONTRACTS.md  ARCHITECTURE.md  BUILD_PLAN.md  CLINICAL_EVIDENCE.md  COMPLIANCE.md  DEFERRED_FINDINGS.md  DEMO_SCRIPT.md  DEPLOY.md  DESIGN_PROMPT.md  DEVELOPMENT.md  DEVPOST_SUBMISSION.md  FRONTEND_SPEC.md  JUDGE_HOOKS.md  JUDGE_HOOK_CHECK.md  MARKETPLACE_LISTING.md  PO_PUBLISHING_RESEARCH.md  PROJECT_BRIEF.md  PROMPT_OPINION_INTEGRATION.md  REHEARSAL_LOG.md  REVIEW_CODE_AUDIT.md  REVIEW_FINAL.md  REVIEW_FUNCTIONAL_TEST.md  REVIEW_NOTES.md  REVIEW_PLAN_VS_CODE.md  REVIEW_SECOND_OPINION.md  REVIEW_SUBMISSION_AUDIT.md  REWRITE_PROPOSAL.md  RISK_REGISTER.md  SCREENSHOT_CHECKLIST.md  SECURITY_REVIEW.md  STORYBOARD.md  SUBMISSION_LOG.md  SYNTHETIC_DATA_SPEC.md
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
scripts/: demo.sh  rewrite_bundles_for_po.py  seed_patients.sh  smoke_po.sh  tunnel-cf.sh  tunnel.sh
tests/: test_a2a_new_skill_routes.py  test_a2a_skill_dispatch.py  test_a2a_treatment_conflicts_route.py  test_agent_card_v1.py  test_api_key_middleware.py  test_approve_race.py  test_assess_postop_aki.py  test_assess_pph_severity.py  test_cache.py  (+23 more)
(+158 files in other folders)
